bin/tests/snapshots/useless_parens__fix_31ac41c8c6e98946b178fde2f6c5a168103df16fc12290ac3f38e5f12d9c67aa.snap
---
source: bin/tests/useless_parens.rs
expression: "\"(\\\"hello\\\")\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-("hello")
+"hello"
