bin/tests/snapshots/useless_parens__lint_4d37aa86b470346c97523d0152f7860b8d3a5c945516ceb711376e968446e310.snap
---
source: bin/tests/useless_parens.rs
expression: "\"let a = (1 + 2); in null\""
---
[W08] Warning: These parentheses can be omitted
   ╭─[<temp_file_path>:1:9]
   │
 1 │ let a = (1 + 2); in null
   ·         ───┬───  
   ·            ╰───── Useless parentheses around value in binding
───╯
